2007-10-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb: Boost bulk_threshold to 1000, Marshal
	format is smaller than yaml format quick index.
	* lib/rubygems/installer.rb: Make #shebang correctly rewrite env
	shebangs.
	* lib/rubygems/specification.rb: Mark Time.today for removal, too much
	depends upon it now.

2007-10-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Sped up ::_load.
	* lib/rubygems/source_index.rb: Sped up #search.
	* lib/rubygems/version.rb: Replace #to_ints with #ints, and cache
	result.
	* lib/rubygems/source_info_cache.rb: Only flush cache when it changes.

2007-10-05  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/user_interaction.rb: Allow customization of completion
	message for progress reporters.
	* lib/rubygems/command.rb: Add --quiet option.
	* lib/rubygems/commands/generate_index_command.rb: Add description.

2007-10-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb: Also check and uninstall old platform
	name to ensure legacy platform gems are uninstalled.
	* lib/rubygems/doc_manager.rb: Remove existing rdoc and ri directory
	so regenerating docs succeeds even if previously interrupted.

2007-10-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb: Make #outdated search only for gems
	matching the current platform.
	* lib/rubygems/commands/dependency_command.rb: Add --platform.
	* lib/rubygems/commands/outdated_command.rb: Ditto.
	* lib/rubygems/commands/specification_command.rb: Ditto.
	* lib/rubygems/commands/update_command.rb: Ditto.

2007-10-02  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/specification.rb: Custom Marshal format to reduce index
	size.
	* lib/rubygems/requirement.rb: Ditto
	* lib/rubygems/version.rb: Ditto

2007-10-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Handle mswin32 on VC6.  Partial patch and
	assistance by Luis Lavena.  Handle cpu-os-version style platforms for